<resources>
    <string name="app_name">Just Tennis FFT</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_proxy_host">Proxy Host</string>
    <string name="prompt_proxy_port">Port</string>
    <string name="prompt_proxy_login">Proxy User</string>
    <string name="prompt_proxy_password">Proxy Password</string>
    <string name="action_sign_in">Connection</string>
    <string name="action_sign_in_short">Connect</string>
    <string name="error_invalid_email">This login address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="use_proxy">Use Proxy</string>

    <string name="msg_fft_must_connect_to_site">You must connect to <a href="https://mon-espace-tennis.fft.fr">fft site</a>.</string>

    <string name="fft_format_date">dd/MM/yyyy</string>
    <string name="msg_common_format_date">EEEEE d MMMMM yyyy</string>

    <string name="msg_no_user_found_in_main_application">No user found in Just Tennis Application.</string>
    <string name="msg_no_millesime_found">No millesime found.</string>
    <string name="msg_no_match_found">No match found.</string>
    <string name="msg_no_player_found">No player found.</string>

    <string name="dialog_confirm_check_match_already_exist_title">Confirm import</string>
    <string name="dialog_confirm_check_match_already_exist_message">This Match has been detected already exist. Confirm check ?</string>

    <string name="drawer_item_millesime_match">Millesime Match</string>
    <string name="drawer_item_ranking_match">Ranking Match</string>
    <string name="drawer_item_find_player">Find Player</string>
    <string name="drawer_item_find_competition">Find Competition</string>
    <string name="drawer_title_communicate">Communicate</string>
    <string name="drawer_item_mon_espace_fft">Mon Espace FFT</string>
    <string name="drawer_item_disconnect">Disconnect</string>

    <string name="drawer_item_login">Login</string>
    <string name="drawer_item_youtube">YouTube</string>

    <string name="view_hint_lastname">Lastname</string>
    <string name="view_hint_firstname">Firstname</string>
    <string name="view_hint_city">City</string>
    <string name="view_hint_name">Name</string>
    <string name="view_hint_date_start">Date Start</string>
    <string name="view_hint_date_end">Date End</string>
</resources>
