<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_millesime_match"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/drawer_item_millesime_match" />
        <item
            android:id="@+id/nav_ranking_match"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_item_ranking_match" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/drawer_item_find_player" />
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    </group>

    <item android:title="@string/drawer_title_communicate">
        <menu>
            <item
                android:id="@+id/nav_fft"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/drawer_item_mon_espace_fft" />
            <item
                android:id="@+id/nav_disconnect"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/drawer_item_disconnect" />
        </menu>
    </item>
</menu>